# The-MOCVD-Cleaning-Robot

./: README.md
robot control pi part/src/dome_src/: CMakeLists.txt  package.xml
robot control pi part/src/dome_src/src/: demo01.cpp  demo01_Wash.cpp  demo02.cpp
robot control pi part/src/gazebo_src/: CMakeLists.txt
robot control pi part/src/gazebo_src/config/: rbd_gazebo_joint_states.yaml  (+1 more)
robot control pi part/src/mocvd09/: manifest.xml
robot control pi part/src/moveit_src/: .setup_assistant  CMakeLists.txt  package.xml  robdemo.rviz
robot control pi part/src/msgs_cpp/: CMakeLists.txt  package.xml
robot control pi part/src/urdf_src/: CMakeLists.txt  demo_axis.rviz  package.xml
robot control pi vis part/: CMakeLists.txt  Pro_order.txt
robot control pi vis part/img/: Frot.cpp  Frot.h  Pret.cpp  Pret.h  Prop.cpp  Prop.h  main.cpp
robot control pi vis part/tmp/: c_cpp_properties.json  launch.json  tasks.json
robot control stm part/Listing/: STM32-DEMO.map  startup_stm32f10x_hd.lst
robot control stm part/USER/: NVIC.c  NVIC.h  STM32-DEMO.axf  STM32-DEMO.build_log.htm  STM32-DEMO.hex  STM32-DEMO.htm  STM32-DEMO.lnp  STM32-DEMO.uvguix.Administrator  STM32-DEMO.uvoptx  STM32-DEMO.uvprojx  STM32-DEMO_USART1-DEMO.dep  Site.c  Site.h  USART1-DEMO.BAT  core_cm3.__i  core_cm3.crf  ikunc.__i  ikunc.c  ikunc.crf  ikunc.d  ikunc.h  main.__i  main.c  main.crf  main.d  message.__i  message.c  message.crf  message.d  message.h  misc.__i  misc.crf  misc.d  site.__i  site.crf  site.d  startup_stm32f10x_hd._ia  stm32f10x_gpio.__i  stm32f10x_gpio.crf  stm32f10x_it.__i  (+17 more)
(+53 files in other folders)
